--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build-storybook": "build-storybook -s public"
   },
   "dependencies": {
+    "framer-motion": "^5.5.6",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
